[tool.poetry]
name = "pkg-testing-tools"
version = "0.2.1"
description = "Packages testing tools for Gentoo"
authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>", "Piotr Karbowski <piotr.karbowski@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
portage = ["portage"]

[tool.poetry.scripts]
pkg-testing-tool = "pkg_testing_tools.main:main"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
#testpaths = ["tests"]
addopts = [ "-v", "--doctest-modules"]
